Bug 270723 - URL is lost when accessed by other application
Summary: URL is lost when accessed by other application
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-12 01:24 UTC by Richard Hartmann
Modified: 2012-05-24 17:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Hartmann 2011-04-12 01:24:27 UTC
Version:           4.6.0 (using KDE 4.6.1) 
OS:                Linux

When you enter an URL into the location bar, press enter and Konqueror decides that the URL needs to be loaded by a different application, the location bar is emptied.

Especially annoying when you construct long and complex URLs by hand.

Filed as Major as it actually causes data loss, however minor.

Reproducible: Always

Steps to Reproduce:
* open Konqueror
* type URL into location bar, for example to a zip file
* press enter
* Konqueror offers to open the file with ark
* Konqueror clears the location bar, deleting its contents



OS: Linux (i686) release 2.6.37-trunk-686
Compiler: gcc
Comment 1 Dawit Alemayehu 2012-05-18 07:41:33 UTC
(In reply to comment #0)
> Version:           4.6.0 (using KDE 4.6.1) 
> OS:                Linux
> 
> When you enter an URL into the location bar, press enter and Konqueror
> decides that the URL needs to be loaded by a different application, the
> location bar is emptied.

Not really. What actually happens is the location bar is restored to the previous URL it was displaying. There is a very valid reason why that is done. If a user types in a URL that cannot be handled by Konqueror, then the location bar must be restored to the URL of the content currently displayed. Otherwise, the content's URL and the location bar URL will get out of sync (mismatch).

Having said that, the problem you are reporting here seems to stem from the fact that Konqueror does not take care not to restore the prior location bar URL even when the location bar was previously empty( the default state when a new tab is created). If that is the case, then it is something that can be addressed easily. Otherwise, it is a WONT FIX for reason stated in the first paragraph.
Comment 2 Dawit Alemayehu 2012-05-24 17:35:17 UTC
Git commit 98f63a671d0b8b76d69c7d4b5fc06c5837408672 by Dawit Alemayehu.
Committed on 24/05/2012 at 19:02.
Pushed by adawit into branch 'KDE/4.8'.

Do not reset the URL entered into Konqueror's location bar URL
when the URL is handled by an external application.
FIXED-IN: 4.8.4
REVIEW: 104982

M  +0    -3    konqueror/src/konqview.cpp

http://commits.kde.org/kde-baseapps/98f63a671d0b8b76d69c7d4b5fc06c5837408672
Comment 3 Dawit Alemayehu 2012-05-24 17:36:36 UTC
Git commit 515aec38fb8e5dce231709de326140040097a504 by Dawit Alemayehu.
Committed on 24/05/2012 at 19:02.
Pushed by adawit into branch 'master'.

Do not reset the URL entered into Konqueror's location bar URL
when the URL is handled by an external application.
FIXED-IN: 4.8.4
REVIEW: 104982
(cherry picked from commit 98f63a671d0b8b76d69c7d4b5fc06c5837408672)

M  +0    -3    konqueror/src/konqview.cpp

http://commits.kde.org/kde-baseapps/515aec38fb8e5dce231709de326140040097a504