Do not reset the URL entered into Konqueror's location bar URL when the URL is handled by an external application.

BUG: 270723
FIXED-IN: 4.8.4
REVIEW: 104982
(cherry picked from commit 98f63a671d0b8b76d69c7d4b5fc06c5837408672)